--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.31.0"
-bs4 = "^0.0.2"
+beautifulsoup4 = "^4.12.3"
+pytest = "^8.2.0"
 
 
 [build-system]
