--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Create GitHub release
         uses: actions/create-release@v1
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: v${{ env.NEW_VERSION }}
           release_name: "v${{ env.NEW_VERSION }}"
           draft: false
