--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -50,8 +50,9 @@ jobs:
 
       - name: Create GitHub release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: v${{ env.NEW_VERSION }}
           release_name: "v${{ env.NEW_VERSION }}"
           draft: false
